--- a/source/gradle/publish-local-maven-artifacts.gradle
+++ b/source/gradle/publish-local-maven-artifacts.gradle
@@ -47,7 +47,7 @@ publishing {
     }
     repositories {
         maven {
-            url = "${project.rootDir}/releases"
+            url = "${project.rootDir}/../releases"
         }
     }
 }
