Minor formatting change, date util function and unit test infra.

--- a/source/components/code-generator/src/main/config/application.config
+++ b/source/components/code-generator/src/main/config/application.config
@@ -27,8 +27,8 @@ JAVA.CLASS.USE.LOMBOK.FOR.GETTER=true
 #==============================================================================
 # List of tables used for generating code. 
 #==============================================================================
-TABLE.LIST= stockoptiondef,stockoptionquotehistory
-# asset, stockalert, stockdetails, stockquotes, portfolio
+TABLE.LIST= stockoptiondef, stockoptionquote, stockoptionquotehistory
+#stockoptiondef, stockoptionquote, stockoptionquotehistory, asset, stockalert, stockdetails, stockquotes, portfolio
 #organization, cloud_provider, provider_resource_type, provider_resource_attribute, stack, environment, environment_resource, environment_resource_attribute
 
 
